# tracksAndDistances

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  org.foxtrotgps.gschema.xml
contrib/: Makefile  Makefile.in  convert2gpx  convert2gpx.1  convert2osm  convert2osm.1  georss2foxtrotgps-poi  gpx2osm  osb2foxtrot  poi2osm
data/: Makefile  Makefile.am  Makefile.in  foxtrotgps.desktop  org.foxtrotgps.convert
pixmaps/: Makefile  Makefile.in
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  bg.gmo  bg.po  cs.gmo  cs.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  nl.gmo  nl.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po  sk.gmo  sk.po  sr.gmo  sr.po
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  converter.c  converter.h  exif.c  friends.c  friends.h  geo_photos.c  globals.c  globals.h  gps_functions.c  hrm_functions.c  init.c  init.h  main.c  map_management.c  map_management.h  poi.c  poi.h  route.c  route.h  support.c  tile_management.c  tracks.c  util.c  wp.c  wp.h
src/.deps/: callbacks.Po  converter.Po  exif.Po  friends.Po  geo_photos.Po  globals.Po  gps_functions.Po  hrm_functions.Po  init.Po  interface.Po  main.Po  map_management.Po  poi.Po  route.Po  support.Po  tile_management.Po  tracks.Po  util.Po  wp.Po
